It shows how the background image and landing page logo are added

--- a/index.html
+++ b/index.html
@@ -1,15 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>MILAN'S PIZZA</title>
-    <link rel ="shortcut icon" type = "image/x-icon" href="../MILAN-PIZZA/favicon_io/favicon.ico" />
+    <title>
+        MILAN'S PIZZA
+    </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../MILAN-PIZZA/favicon_io/favicon.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="../MILAN-PIZZA/CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Caladea&display=swap" rel="stylesheet">
+
 </head>
+
+<nav>
+    <ul>
+        <li><a href="#"> CONTACT US </a></li>
+        <li><a href="#"> ORDER NOW </a></li>
+    </ul>
+</nav>
+
+</div>
+
 <body>
-    <h1>
-        PIZZA DI MILANO
-    </h1>
+    <div class="background">
+
+        <h1>
+            PIZZA DI MILANO
+        </h1>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-1">
+                    <img src="IMAGES/pizzalogo1.png">
+                </div>
+            </div>
+            <hr>
+            </hr>
+            <div class="row">
+                <div class="col-md-3">
+                    <p>PERIPERI:<br>
+                        This pizza has sliced chicken breast, mozzarella cheese,
+                        and a few other complementary toppings,
+                        liberally laced with peri peri sauce.
+                        This pizza is perfect for those who like it spicy.
+                    </p>
+                </div>
+                <div class="col-md-3">
+                    <p>CHICKEN TIKKA:<br>
+                        Chicken Tikka Pizza is prepared with small
+                        cubes of boneless chicken as the key ingredient.
+                        Tasty pizza sauce along with chicken pieces,
+                        vegetables and cheese mixture gives away a finger-licking chicken pizza.
+                    </p>
+                </div>
+                <div class="col-md-3">
+                    <p>GRILLED PIZZA:<br>
+                        Crispy and grilled flatbread pizza layered with
+                        cream cheese, chicken, mushrooms and onions. Homemade Grilled
+                        Pizza is the next best thing to a pizza made in a wood fired oven.
+                        Store-bought Pizza dough is topped with cream cheese, chicken, mushrooms and onions.
+                    </p>
+                </div>
+                <div class="col-md-3">
+                    <p>HAWAIIAN:<br>
+                        Hawaiian pizza is the most underrated pizza on the planet.
+                        Combining pineapple, cheese, and ham, Hawaiian pizza is sweet, salty,
+                        and cheesy all in 1 bite. It’s just the BEST pizza variety!
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <p>PERIPERI:<br>
+                This pizza has sliced chicken breast, mozzarella cheese,
+                and a few other complementary toppings,
+                liberally laced with peri peri sauce.
+                This pizza is perfect for those who like it spicy.
+            </p>
+        </div>
+        <div class="col-md-3">
+            <p>PERIPERI:<br>
+                This pizza has sliced chicken breast, mozzarella cheese,
+                and a few other complementary toppings,
+                liberally laced with peri peri sauce.
+                This pizza is perfect for those who like it spicy.
+            </p>
+        </div>
+        <div class="col-md-3">
+            <p>PERIPERI:<br>
+                
+            </p>
+        </div>
+        <div class="col-md-3">
+            <p>PERIPERI:<br>
+                This pizza has sliced chicken breast, mozzarella cheese,
+                and a few other complementary toppings,
+                liberally laced with peri peri sauce.
+                This pizza is perfect for those who like it spicy.
+            </p>
+        </div>
+    </div>
+</div>
+<div class= "container">
+    <div id="form">
+        <div class= "background2">
+            <form>
+                <input type= "text" placeholder="name">
+            </form>
+        </div>
+    </div>
+</div>
 </body>
+
 </html>
