--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         MILAN'S PIZZA
     </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script   src="https://code.jquery.com/jquery-3.4.1.min.js"   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/x-icon" href="../MILAN-PIZZA/favicon_io/favicon.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -108,14 +109,44 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div id="form">
-            <div class="background2">
-                <form>
-                    <input type="text" placeholder="name">
+
+    <div class="form">
+        <div class="container">
+            <div class="row">
+                <form action="" method="">
+                    <p>PLACE YOUR ORDER BY FILLING IN THE DETAILS BELOW;</p>
+                    <label for="PIZZA">Choose a size:</label>
+                    <select id="pizzaSize" name="pizzaSize">
+                        <option value="large">large</option>
+                        <option value="medium">medium</option>
+                        <option value="small">small</option>
+                    </select>
+
+                    <label for="PIZZA">Choose your crust:</label>
+                    <select id="pizzaSize" name="pizzaSize">
+                        <option value="Crispy">Crispy</option>
+                        <option value="Stuffed">Stuffed</option>
+                        <option value="Glutten-Free">Glutten-Free</option>
+                    </select>
+
+                    <label for="PIZZA">Toppings</label>
+                    <select id="pizzaSize" name="pizzaSize">
+                        <option value="withToppingd">With toppings</option>
+                        <option value="withoutToppings">No toppings</option>
+                    </select>
+
+                    <label for="PIZZA">Delivery Location</label>
+                    <select id="pizzaSize" name="pizzaSize">
+                        <option value="withinCbd">within CBD</option>
+                        <option value="outsideCbd">outside CBD</option>
+                    </select>
+
+                    <input type="submit" name="submitbutton" value="CHECKOUT" class="ORDER">
+
                 </form>
             </div>
         </div>
+
     </div>
 </body>
 
