Modified javascript code

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <nav>
     <ul>
-        <li><a href="#"> CONTACT US </a></li>
-        <li><a href="#"> ORDER NOW </a></li>
+        <li><a href="#">  CONTACT US </a></li>
+        <li><a href="#form"> ORDER NOW </a></li>
     </ul>
 </nav>
 
@@ -76,45 +76,13 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <p>PERIPERI:<br>
-                    This pizza has sliced chicken breast, mozzarella cheese,
-                    and a few other complementary toppings,
-                    liberally laced with peri peri sauce.
-                    This pizza is perfect for those who like it spicy.
-                </p>
-            </div>
-            <div class="col-md-3">
-                <p>PERIPERI:<br>
-                    This pizza has sliced chicken breast, mozzarella cheese,
-                    and a few other complementary toppings,
-                    liberally laced with peri peri sauce.
-                    This pizza is perfect for those who like it spicy.
-                </p>
-            </div>
-            <div class="col-md-3">
-                <p>PERIPERI:<br>
 
-                </p>
-            </div>
-            <div class="col-md-3">
-                <p>PERIPERI:<br>
-                    This pizza has sliced chicken breast, mozzarella cheese,
-                    and a few other complementary toppings,
-                    liberally laced with peri peri sauce.
-                    This pizza is perfect for those who like it spicy.
-                </p>
-            </div>
-        </div>
-    </div>
 
     <div id="form">
         <div class="container">
             <div class="row">
-                <form action="POST">
-                    <p>PLACE YOUR ORDER BY FILLING IN THE DETAILS BELOW;</p><br>
+                <form>
+                    <h2>Place your order by filling in the details below;</h2><br>
                     <label for="PIZZA">Choose a size:</label>
                     <select id="pizzaSize" name="pizzaSize">
                         <option value="large">large</option>
@@ -139,9 +107,9 @@
                     <select id="deliveryLocation" name="deliveryLocation">
                         <option value="withinCbd">within CBD</option>
                         <option value="outsideCbd">outside CBD</option>
-                    </select>
+                    </select><br>
 
-                    <input type="submit" name="submitbutton" value="CHECKOUT" id="chcekout">
+                    <input type="submit" name="submitbutton" value="CHECKOUT" id="checkout">
 
                 </form>
             </div>
