--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         MILAN'S PIZZA
     </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="JS/main.js"></script>
+    <script src="JS/jquery-3.4.1.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Spartan&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="../MILAN-PIZZA/favicon_io/favicon.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +19,7 @@
 
 <nav>
     <ul>
-        <li><a href="#">  CONTACT US </a></li>
+        <li><a href="#"> CONTACT US </a></li>
         <li><a href="#form"> ORDER NOW </a></li>
     </ul>
 </nav>
@@ -81,7 +82,7 @@
     <div id="form">
         <div class="container">
             <div class="row">
-                <form>
+                <form action="GET">
                     <h2>Place your order by filling in the details below;</h2><br>
                     <label for="PIZZA">Choose a size:</label>
                     <select id="pizzaSize" name="pizzaSize">
@@ -104,12 +105,25 @@
                     </select>
 
                     <label for="deliveryLocation">Delivery Location</label>
+                    <script>
+                        $(document).ready(function () {
+                            $("#deliveryLocation").click(function () {
+                                prompt("ENTER YOUR DELIVERY LOCATION")
+                            });
+                        });
+                    </script>
                     <select id="deliveryLocation" name="deliveryLocation">
-                        <option value="withinCbd">within CBD</option>
-                        <option value="outsideCbd">outside CBD</option>
-                    </select><br>
+                    </select>
 
-                    <input type="submit" name="submitbutton" value="CHECKOUT" id="checkout">
+                    <label for="Amount">Number of pizzas</label>
+                    <input type="number" id="Amount">
+                    <option value=""></option>
+
+                    </select>
+
+
+
+                    <input type="submit" name="submitbutton" value="checkout" id="checkout" onclick="Reset();" />
 
                 </form>
             </div>
