added pizza types to the form

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <label for="type">Choose a Pizza Type:</label>
                     <select id="pizzaType" name="type">
                         <option value="Hawaiian">Hawaiian</option>
-                        <option value="chickenTikka">chicken Tikka/option>
+                        <option value="chickenTikka">chicken Tikka</option>
                         <option value="periPeri">Peri Peri</option>
                         <option value="grilledPizza">Grilled Pizza</option>
 
@@ -139,7 +139,7 @@
 
 
 
-                    <input type="submit" name="submitbutton" value="checkout" id="checkout" onclick="Reset();" />
+                    <input type="reset" name="submitbutton" value="checkout" id="checkout" onclick="Reset();" />
 
                 </form>
             </div>
