--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <script>
                         $(document).ready(function(){
                             $("#checkout").click(function(){
-                                alert("your total is" + 3000)
+                                alert(" Your total is " + 3000)
                             })
                         })
                     </script>
