added more changes

--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
                     </script>
                     <script>
                         $(document).ready(function(){
-                            var summary = parseInt(Amount*(pizzaSize + topping + pizzaType + crust))
-                            alert("total = " + 3000)
+                            var summary = parseInt(Amount*(pizzaSize + topping + pizzaType + crust)
                         });
                     </script>
                 </form>
