added more changes to my Webpage

--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
                     <select id="deliveryLocation" name="deliveryLocation">
                     </select>
 
+                    <label for="noDeliveryLocation">Collect from shop</label>
+                    <select id="noDeliveryLocation" name="noDeliveryLocation">
+                        <option value="YES">YES. AMT = 250</option>
+                        <option value="NO">NO</option>
+                    </select>
+
                     <label for="Amount">Number of pizzas</label>
                     <input type="number" id="Amount">
                     <option value=""></option>
