modified the form

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
                     <label for="noDeliveryLocation">Collect from shop</label>
                     <select id="noDeliveryLocation" name="noDeliveryLocation">
-                        <option value="YES">YES. AMT = 250</option>
-                        <option value="NO">NO</option>
+                        <option value="YES">YES</option>
+                        <option value="NO">NO: AMT=250</option>
                     </select>
 
                     <label for="Amount">Number of pizzas</label>
